# ai_interview_pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: company_alias.yaml  knowledge_taxonomy.yaml  pipeline.yaml
context/: log.md
prompts/: classify.md  coverage_check.md  dedupe_judge.md  extract_atomic.md
src/: __init__.py  main.py  settings.py
src/aggregate/: __init__.py  by_company.py  by_knowledge.py
src/audit/: __init__.py  coverage.py
src/classify/: __init__.py  classifier.py
src/dedupe/: __init__.py  candidates.py  judge.py
src/extract/: __init__.py  extractor.py
src/ingest/: __init__.py  csv_parser.py  markdown_parser.py  special_parser.py
src/llm/: __init__.py  deepseek_client.py  embeddings.py
src/models/: __init__.py  schemas.py
src/preprocess/: __init__.py  chunker.py  cleaner.py
